fix: 23585 Fixed `com.swirlds.base.utility.RetryTest`
Signed-off-by: Ivan Malygin <ivan@swirldslabs.com>